fixtures/solidity/translated_semantic_tests/errors/require_error_condition_evaluated_only_once/require_error_condition_evaluated_only_once.sol
contract C {
    uint256 counter = 0;
    error CustomError(uint256);
    function getCounter() public view returns (uint256) {
        return counter;
    }
    function g(bool condition) internal returns (bool) {
        counter++;
        return condition;
    }
    function f(bool condition) external {
        require(g(condition), CustomError(counter));
    }
}